--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -3,12 +3,21 @@
 }
 
 .patientList {
-  width: 20%;
+  width: 30%;
   margin:auto;
   margin-bottom: 4px;
   border: 2px solid grey;
   border-radius: 20px;
   background-color: rgba(233, 241, 244, 0.902);
+}
+
+.deceased {
+  width: 30%;
+  margin:auto;
+  margin-bottom: 4px;
+  border: 2px solid grey;
+  border-radius: 20px;
+  background-color: rgba(228, 196, 196, 0.902);
 }
 
 //Details-Button
