--- a/src/app/details/details.component.scss
+++ b/src/app/details/details.component.scss
@@ -11,6 +11,15 @@
   background-color: rgba(233, 241, 244, 0.902);
 }
 
+.deceased {
+  width: 30%;
+  margin:auto;
+  margin-bottom: 4px;
+  border: 2px solid grey;
+  border-radius: 20px;
+  background-color: rgba(228, 196, 196, 0.902);
+}
+
 ul {
   padding: 5px;
   text-align: center;
